Added google biq query initialize

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,10 @@ flask-pymongo = "*"
 wtforms = "*"
 flask-basicauth = "*"
 flask-cors = "*"
+google-auth = "*"
+google-auth-oauthlib = "*"
+google-auth-httplib2 = "*"
+google-api-python-client = "*"
 google-cloud-bigquery = "*"
 
 [dev-packages]
