--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ google-auth-oauthlib = "*"
 google-auth-httplib2 = "*"
 google-api-python-client = "*"
 google-cloud-bigquery = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
